@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Add SKIP_TESTS_HAVING_ARGS environment variable
+
 Phoronix Test Suite 7.2.0 Milestone 1
 14 April 2017
 
